app/src/main/java/com/example/rentit/core/error/ServerErrorException.kt
package com.example.rentit.core.error

class ServerErrorException(message: String? = null): Exception(message)